--- a/Read/Management/02.管理落地/06.管理之向上沟通.md
+++ b/Read/Management/02.管理落地/06.管理之向上沟通.md
@@ -5,7 +5,8 @@
 - 04.难领会上级意图
 - 05.影响上级的决策
 - 06.辅助领导拆方案
-- 07.向上管理的精髓
+- 07.向上沟通的注意
+- 08.向上管理的精髓
 
 
 
@@ -83,7 +84,31 @@
 - 领导向他投去赞许的目光，欣然同意了这个方案。**当领导遇到难题时，听到大家都在抱怨、推诿，这时候有一个人站在领导身边，想方设法借助领导的资源，去摆平困难，把不可能变成可能**。不得不说，这种懂得向上管理的人，谁都愿意倾力相助。
 
 
-### 07.向上管理的精髓
+### 07.向上沟通的注意
+#### 7.1 沟通保持简洁
+- 沟通交流方式一定要尽量保持简洁。管理者的级别越高，其它级别的员工在沟通工作中，就越需要跟他们传达更简洁有用的信息。
+- 中高层管理者在面对海量信息时，必须要筛选大量信息，把注意力集中在最有用和最重要的内容上。他们不希望在已知信息的基础上，被海量杂乱信息所干扰。
+- 作为下属，在当面沟通、发送电子邮件、打电话或者写备忘录的时候，务必做到言简意赅。此外，还必须根据老板的喜好，调整有关工作汇报的频次。
+
+
+#### 7.2 分享重要好消息
+- 缺乏安全感的员工，总是倾向于跟上司分享所有的好消息。一个在时间管理方面有很大挑战的上层管理者，肯定不希望了解所有的好消息。
+- 对于一些不重要的好消息，你可以在沟通对话结束之际稍微提及。至于非常重要的好消息，那你就不应该有所犹豫，要在第一时间跟上司分享。
+
+
+#### 7.3 诚实谨慎分享坏消息
+- 在向老板分享坏消息之前，一定要仔细思考该说些什么内容，如何去表述这个坏消息，并提出可以采取的改善措施，从而将负面影响控制到最低。
+- 如果你隐藏或者扭曲重要的事实，只会导致上司对你的不信任。
+
+
+#### 7.4 归类整理重要信息
+- 一定要把最重要的信息归类整理起来，务必要注明日期。信息整理可以通过传统的纸质形式归类整理，也可以通过电子文档的方式来整理。
+- 如果某个问题非常重要的话，最好打印一份，摆放在老板的办公室桌面。
+- 对于上层管理者而言，由于每天可能会接触过量的信息，因此，他们有可能会忘记这份文件，甚至可能会忘记关于这个问题相关的讨论。
+- 因此，在这种情况下，注明日期的已归档文件，就相当于是一份保险，有助于员工做好后续工作的跟进与落实。
+
+
+### 08.向上管理的精髓
 - 真正的向上管理，不是讨好领导、唯命是从，而是你能与领导站在同一条战线，拥有同样的视野，一起为共同的目标而努力。
 - 在这个过程中，你通过调配领导的资源，有能力去做更有价值的事情，也因此增加了你的不可替代性，最终你和领导相互成就，职业生涯也能走得更远。
 - 成就上级从而成就自己。工作使大家走到了一起，同事首先就是一种合作关系。上级所掌握的资源和影响力，对人在职场中的发展起到了决定性作用。职场上快速发展的人无疑都是善于和上级合作的，他们在做好份内事的同时，会积极帮助上级排忧解难。上级也会把更多的锻炼机会提供给他们，把自己的真经传授给他们。他们会逐步熟悉上级的工作内容和技巧，而这些都是一个人得到快速发展的重要条件。
