--- a/Read/ReadBlogWiki/06.职场总结/05.职场困扰和疑惑.md
+++ b/Read/ReadBlogWiki/06.职场总结/05.职场困扰和疑惑.md
@@ -1,7 +1,6 @@
 #### 目录介绍
-- 01.职场焦虑的源头
-- 02.焦虑源头的分析
-- 03.碰到职业倦怠期
+- 01.碰到职业倦怠期
+- 02.摆脱焦虑三部曲
 - 04.太忙没时间学习
 - 05.避免做伪工作者
 - 06.远离低质量勤奋
@@ -14,18 +13,11 @@
 
 
 
-### 01.职场焦虑的源头
+### 01.碰到职业倦怠期
+#### 1.1 如何理解倦怠期
+- 成长的途中，总会面临很多的困扰与惶惑，这些困扰和彷徨很多都关乎选择，只有了解并认清这类困惑，我们才可能做出最合适的选择。职业生涯的路上，每个人都会碰到职业倦怠期。
+- 那职业倦怠到底是怎样的一种感受呢？1974年美国临床心理学家弗罗伊登贝格尔首次提出“职业倦怠”的概念，用来指人面对过度工作时产生的身体和情绪的极度疲劳。
 
-
-
-### 02.焦虑源头的分析
-
-
-
-### 03.碰到职业倦怠期
-#### 3.1 如何理解倦怠期
-- 成长的途中，我们总会面临很多的困扰与惶惑，这些困扰和彷徨很多都关乎选择，只有了解并认清这类困惑，我们才可能做出最合适的选择。
-- 职业生涯的路上，每个人都会碰到职业倦怠期，那职业倦怠到底是怎样的一种感受呢？1974年美国临床心理学家弗罗伊登贝格尔首次提出“职业倦怠”的概念，用来指人面对过度工作时产生的身体和情绪的极度疲劳。
 
 
 #### 3.2 不同职业倦怠感
@@ -34,6 +26,22 @@
 - 这种短期的倦怠感觉其实和感冒差不多常见，年年都能碰上一两次，应对的办法其实也很简单：休个年假，脱离当前的环境，换换节奏，重新补充 “燃料”，恢复精力。
 - 第二种状态：存在“混日子”的上班族，虽不情愿，但又没有别的办法，毕竟不能失去这份工作的收入。其实这个就是处在一种长期的职业倦怠期。
 - 时间久了后，也难免碰到职业倦怠感，这时我们可能就会困惑：难道我已不再热爱现在的工作了？对于这种状态，有一个说法是这样的：倦怠，意味着你在这一关打到头了，而新的一关的钥匙，就在你手上。
+
+
+
+### 02.摆脱焦虑三部曲
+#### 2.1 为什么会焦虑
+- 原因其实很简单，因为焦虑起着一个非常重要的作用，它可以让我们避免其他负面情绪，如悲伤、忧愁、绝望等等。相比这些发自内心的负面情绪，焦虑更容易被人接受，并使人在认知和语言上处于一个更肤浅的空间。
+- 简单来说就是，焦虑让人很不舒服，但是比其他发自内心的负面情绪感觉更好。
+
+
+#### 2.2 如何应对焦虑
+- 1.给自己设定“焦虑时间”。通过限制自己焦虑的时间来把焦虑变小，而不是让焦虑占用你一整天的时间。比如，你可以专门留出一个特定的 30 分钟时间段，将它指定为你的“焦虑时间”。
+- 当焦虑在指定的时间外冒出来时，问问自己：“我现在可以做点什么呢？”通过做其他事情，来转移自己的注意力，告诉自己到“焦虑时间”再去焦虑。
+- 等真正到了“焦虑时间”，可能你已经忘记了刚才让你感到不安的事情，或者焦虑情绪已经减弱。这种拖延的方式能够帮助你控制焦虑。
+- 2.直接关注可能发生的最坏情况。通常情况下，陷入焦虑的人总会说“如果……会怎么样”，为还没有发生的事情感到焦虑。既然如此，那你就实际地想象一下最坏的情况，生动详细地描述你所担心的一切。
+- 比如，你为自己即将要在一群人面前演讲感到焦虑，就可以想象一下，你一个人站在台上，忘词、手抖、逻辑混乱，台下的人嘘声一片，甚至有人开始离场。
+- 这在心理学上叫做影像曝光，虽然有效，但却比较难掌控。之后继续重复这个想象，直到你感到厌烦为止。
 
 
 
