--- a/Read/ReadBlogWiki/07.底层思维/04.记忆能力的训练.md
+++ b/Read/ReadBlogWiki/07.底层思维/04.记忆能力的训练.md
@@ -1,17 +1,18 @@
 #### 目录介绍
-- 01.记忆力的组成
+- 01.记忆力组成介绍
 - 02.锻炼短期记忆力
 - 03.视觉记忆力锻炼
 - 04.听觉记忆力锻炼
 - 05.编码拆分小游戏
 - 06.提高长期记忆力
-- 07.训练回忆的能力
+- 07.给大脑记忆保鲜
+- 09.训练回忆的能力
 - 10.今天起改变三点
 - 12.课后作业需实践
 
 
 
-### 01.记忆力的组成
+### 01.记忆力组成介绍
 - 我小时候读书读不好时，经常被说：“金鱼脑子，什么东西都记不住。”听上去，好像记忆能力跟成绩好不好关系很大。
 - 记忆能力由3部分组成，包括短期记忆力、长期记忆力和回忆能力，长期记忆力又包括情景记忆力和语义记忆力。
 
@@ -37,24 +38,35 @@
 
 
 ### 05.编码拆分小游戏
-- 大脑便笺条的使用率越高，就相当于我们一下子记住的东西会越多。因此，接下来我们要做的，就是提高便笺条的使用效率。会速记的人特别“牛”，他们用代码将一整句话浓缩成几个字，相同大小的便笺条上，他们能记录的东西更多。对我们这些没有经过专业训练的人，要记一句话就几乎需要把整句话默写下来，可能一句话都没记完，便笺条就已经写满了，自然便笺条上涵盖的信息量就比较少。
+- 大脑便笺条的使用率越高，就相当于我们一下子记住的东西会越多。因此，接下来我们要做的，就是提高便笺条的使用效率。会速记的人特别“牛”，他们用代码将一整句话浓缩成几个字，相同大小的便笺条上，他们能记录的东西更多。
+- 对我们这些没有经过专业训练的人，要记一句话就几乎需要把整句话默写下来，可能一句话都没记完，便笺条就已经写满了，自然便笺条上涵盖的信息量就比较少。
 
 
 
 
 ### 06.提高长期记忆力
 - 把长期记忆力比作大脑的仓库。平时生活中，我们随手记在便笺条上的东西，有一些等没用就扔了，比如随手写的电话号码，打完电话我们觉得没用就扔了；但有一些便笺条的内容特别有用时，我们可能就会重新写在笔记本上、电脑上或者记在脑子里。大脑也是这样，有用的东西，我们希望它进入大脑的仓库。
-- 那么，怎么提高长期记忆力？在回答这个问题之前，我想问两个问题：为什么一年前去迪士尼旅游的经历都记得住，昨天才教的数数就忘了呢？为什么可以一字不差背出流行歌曲的歌词，但就是记不住语文课文？这两个问题的本质，问到了长期记忆力的核心所在，长期记忆力怎么能够让便笺条的内容变成大脑仓库里的东西？关键就是“我想”和“我懂”。
+- 那么，怎么提高长期记忆力？在回答这个问题之前，我想问两个问题：为什么一年前去迪士尼旅游的经历都记得住，昨天才教的数数就忘了呢？为什么可以一字不差背出流行歌曲的歌词，但就是记不住语文课文？
+- 这两个问题的本质，问到了长期记忆力的核心所在，长期记忆力怎么能够让便笺条的内容变成大脑仓库里的东西？关键就是“我想”和“我懂”。
 - 什么叫“我想”？就是有兴趣。大脑仓库的长期记忆力这类高阶能力，相当于大脑别墅的第二层，要打通这个通道，最关键是让自己感兴趣。为什么一年前去迪士尼旅游他记得住？因为体验过、感兴趣，当时给他的感受是快乐。
-- 什么叫“我懂”？理解能力和思考能力要跟上；不死记硬背；
+- 什么叫“我懂”？理解能力和思考能力要跟上；不死记硬背；最好是通过实践或者分享加深印象，这样记忆更加深刻。
 
 
 
+### 07.给大脑记忆保鲜
+- 第一种：间隔式练习，提升记忆效果。在学习过程中，穿插安排练习其他的学习内容，加上多样化的练习，会让你把学到的东西掌握得更牢固，记忆得更长久，而且更为实用。
+- 举个例子，当你读一本非常喜欢的书时，与其读完把它收在精致的书架中，不如在一个月后再读一遍，三个月后再读一遍，六个月后再读一遍，一年之后再读一遍。隔段时间就要回顾，这样的间隔性练习会让我们把相关事项记忆得更牢固。
+- 第二种：学会用自己熟悉的方式进行二次加工。死记硬背的知识越来越少，活学活用的技能越来越多，理论到实践的转化是工作后非常重要的能力。
+- 无论是读一本书，还是学习一项业务，重要的是要加入自己的理解，学会用自己熟悉的语言方式去表达出所做的工作，只有这样才是真正的理解记忆。
+- 第三种：把你 50% 的时间用来学习新东西，剩下的时间用来和别人分享或者解释你所学到的东西。向别人解释一个概念是促进自己学习的最好方法。
+- 例如，与其一口气读完一本书，不如在读到一半的时候，试着回忆一下之前的内容，分享或记下你学到的关键思想。50/50 法则是学习、处理、保留和记住信息的更好方法。
 
-### 07.训练回忆的能力
+
+
+### 09.训练回忆的能力
 - 把回忆能力比作调度系统。很多人的长期记忆力都不错，“仓库很大”，那么遇到问题时，如何更有效地调出需要的系统呢？这里，提供4个关键点。
 - 找到信息。就是之前说的“建立联系”。从出生开始一直到成人，我们的认知过程就是不断建立联系的过程。比如，在书上看到一个寒门读书高中的故事，可以问：“这和你以前哪里看到的故事有什么不一样？”尝试鼓励建立这样的联系。
-- 进行比较。今天是晴天，昨天呢？将过程进行比较。比较也是在帮助孩子找到信息、建立联系。
+- 进行比较。今天是晴天，昨天呢？将过程进行比较。比较也是在帮助自己找到信息、建立联系。
 - 找到联系。以上两个例子其实是初级的建立联系，第三个是更加高阶的“找到联系”。你想到了什么？根据物体进行词组联想。其实，这就是扩散性思维，针对一个物体或者一个词组进行联想， 帮助找到联系。
 - 命题口述。准备好“命题口述”。“我的一天”是一个能很好地帮助自己回顾他的一整天、调度记忆的练习。做生活的记忆者，但和生活的记忆者不同的是，这时我们希望能够描述一个整块的、更长的生活片段。
 
