--- a/Read/ReadBlogWiki/07.底层思维/11.提问能力的提升.md
+++ b/Read/ReadBlogWiki/07.底层思维/11.提问能力的提升.md
@@ -7,7 +7,8 @@
 - 06.一句话概括问题
 - 07.较为详细的描述
 - 08.不排斥不同观点
-- 09.提问高手的特点
+- 09.有效提问四步骤
+- 10.提问高手的特点
 
 
 
@@ -64,7 +65,16 @@
 - 对不同的观点，不要排斥。站在不同的角度去思考问题，当然会有不同见解，要慢慢学会理解，如果尚未思考就直接排斥，很有可能会走偏。
 
 
-### 09.提问高手的特点
+### 09.有效提问四步骤
+- 步骤一：事先研究。在寻求他人帮助之前，你可以先自己尝试寻找解决方案。虽然不应该害怕向他人提问，但也应该尊重他人时间，确认自己实在无法解决之后，再去问别人。
+- 当然，这里所说的先自己尝试解决，不是要你花数小时或者数天时间去研究问题，而是要给自己一个限定的研究时间，比如 30 分钟左右。具体的研究时间还要依据问题而定，太短或太长都不合适。
+- 步骤二：提供背景信息。当你决定要向他人提问后，你要尽可能多地向请教的人提供背景信息。让对方能迅速了解背景信息，快速给予帮助。
+- 步骤三：列出目前所做的尝试。你还需要告诉对方自己已经做了哪些尝试，帮对方省去一些重复尝试。这样可以让对方知道某些方法是行不通的，从而迅速排除掉该方法，把时间和精力投入到寻找其他有效方法上。
+- 步骤四：写下答案当你得到答案后，一定要迅速把答案记下来，形成方法论。以后再遇到同一个问题的时候，也可以从中做下参考。
+
+
+
+### 10.提问高手的特点
 - 真正的提问高手，都是批判性思维之大成者，在《提问的艺术》一书中提到，一个优秀的批判性思维者必备的4个特征：
 - 1、知识面广泛，能够从多个角度去理解事物；2、任何结论都有强有力的证据和原因；3、善于倾听他人的想法，但会从内心评判该想是否有足够的支撑；4、为了找到原因和证据，会尝试多种思考方式。
 
