--- a/Read/YCBlogWiki/java/08.类的加载/08.Java内存模型详解.md
+++ b/Read/YCBlogWiki/java/08.类的加载/08.Java内存模型详解.md
@@ -91,6 +91,7 @@
     - ![image](https://img-blog.csdnimg.cn/2dfde6968cd44f7c88069ecd70142d0d.png)
 
 
+
 ##### 2.2.3 局部变量表
 - 定义为一个数字数组，主要用于存储方法参数、定义在方法体内部的局部变量
     - 数据类型包括各类基本数据类型，对象引用，以及 return address 类型。
@@ -129,7 +130,8 @@
 
 #### 2.3 本地方法栈
 - 本地方法栈的定义
-    - 本地方法栈是为 JVM 运行 Native 方法准备的空间，由于很多 Native 方法都是用 C 语言实现的，所以它通常又叫 C 栈。它与 Java 虚拟机栈实现的功能类似，只不过本地方法栈是描述本地方法运行过程的内存模型。
+    - 本地方法栈是为 JVM 运行 Native 方法准备的空间，由于很多 Native 方法都是用 C 语言实现的，所以它通常又叫 C 栈。
+    - 它与 Java 虚拟机栈实现的功能类似，只不过本地方法栈是描述本地方法运行过程的内存模型。
 - 本地方法栈：
     - 跟虚拟机栈很像， **虚拟机栈为虚拟机执行 Java 方法 （也就是字节码）服务，而本地方法栈则为虚拟机使用到的 Native 方法服务。** 在 HotSpot 虚拟机中和 Java 虚拟机栈合二为一。
 - 栈帧变化过程
