feat：完善适配器设计模式笔记

--- a/Read/ReadBlogWiki/04.执行策略/17.阶段复盘方法论.md
+++ b/Read/ReadBlogWiki/04.执行策略/17.阶段复盘方法论.md
@@ -129,7 +129,8 @@
 
 
 #### 8.1 汇总碎片想法
-- 一个记录“每日生活”的笔记本，我用有道云，主要记录每一天做了什么，以及在做这些事情的过程中产生的一切想法。那么，问题来了：这些碎片想法，会散落在每一天的记录中，不方便查找和纵览，怎么样才能汇总起来呢？这就需要用思维导图或者流程图，来对它们进行归纳。
+- 一个记录“每日生活”的笔记本，我用有道云，主要记录每一天做了什么，以及在做这些事情的过程中产生的一切想法。
+- 那么，问题来了：这些碎片想法，会散落在每一天的记录中，不方便查找和纵览，怎么样才能汇总起来呢？这就需要用思维导图或者流程图，来对它们进行归纳。
 
 
 
@@ -147,7 +148,8 @@
 
 #### 8.4 KPT复盘法
 - KPT 复盘法，与其说是一个方法，不如说是一个原则。它的用法就是，在复盘的时候，问自己三个问题：Keep/ 保持：哪些行为是可以保持的？Problem/ 问题：在过程中遇到了哪些问题？Try/ 尝试：我可以尝试去做些什么？
-- 你会发现，单纯把这些东西记下来，其实意义不大，你要真的落到实处才有用。比如：Try 的部分，就可以跟“行动卡片”结合起来，用行动卡片把“尝试”落实、具体化；Problem 的部分，就可以通过主题汇总和模板，整理成一张核对清单。下一次行动时，对着打钩，可以帮助自己减少思考成本；Keep 的部分，可以考虑归纳出方法论，无论是指导自己的实践还是传授给别人，都非常有用。
+- 你会发现，单纯把这些东西记下来，其实意义不大，你要真的落到实处才有用。比如：Try 的部分，就可以跟“行动卡片”结合起来，用行动卡片把“尝试”落实、具体化；Problem 的部分，就可以通过主题汇总和模板，整理成一张核对清单。
+- 下一次行动时，对着打钩，可以帮助自己减少思考成本；Keep 的部分，可以考虑归纳出方法论，无论是指导自己的实践还是传授给别人，都非常有用。
 
 
 
@@ -161,7 +163,8 @@
 - 你生活中是如何进行复盘的。针对复盘的提升，你有什么好的点子。如果有，分享给我小杨。
 
 
-
+### 参考博客
+- https://time.geekbang.org/column/article/284832
 
 
 
