--- a/Read/ReadQuestion/07.设计模式问题汇总.md
+++ b/Read/ReadQuestion/07.设计模式问题汇总.md
@@ -94,4 +94,29 @@
 
 
 
+#### 4.3 适配器设计模式
+- 目的：这个模式就是用来做适配的，它将不兼容的接口转换为可兼容的接口，让原本由于接口不兼容而不能一起工作的类可以一起工作。
+- 类比：类似USB转接头，既可以链接Android手机，也可以链接IOS手机。
+- 实现：类适配器，通过继承来实现(定义接口)；对象适配器，通过组合来实现。
+- 应用场景：封装有缺陷的接口设计，统一多个类的接口设计。适配器模式可以看作一种“补偿模式”，用来补救设计上的缺陷。
+- 举例子：封装有缺陷的接口，设计统一多个类的接口，设计替换依赖的外部系统，对这三种场景举例子学习。
+- 问题1：适配器模式主要是解决什么问题？如何判断用类适配器还是对象适配器？判断的依据是什么？
+- 问题2：在实际开发中，什么情况下才会出现接口不兼容呢，试着举一些场景？
+
+
+#### 4.4 装饰者设计模式
+- 目的：
+- 实现：
+- 举例子：
+- 问题1：
+- 问题2：
+
+
+#### 4.5 外观设计模式
+- 目的：
+- 实现：
+- 举例子：
+- 问题1：
+- 问题2：
+
 
