--- a/Read/ReadAndroid/01.大型方案/16.通用缓存设计实践.md
+++ b/Read/ReadAndroid/01.大型方案/16.通用缓存设计实践.md
@@ -187,6 +187,7 @@
 
 ### 03.存储方案原理
 #### 3.1 Sp存储原理分析
+##### 3.1.1 SharedPreferences存储分析
 - SharedPreferences，它是一个轻量级的存储类，特别适合用于保存软件配置参数。
     - 轻量级，以键值对的方式进行存储。采用的是xml文件形式存储在本地，程序卸载后会也会一并被清除，不会残留信息。线程安全的。
 - 它有一些弊端如下所示
@@ -197,6 +198,26 @@
     - 建议不要存储较大数据；频繁修改的数据修改后统一提交而不是修改过后马上提交；在跨进程通讯中不去使用；键值对不宜过多
 - 读写操作性能分析
     - 第一次通过`Context.getSharedPreferences()`进行初始化时，对`xml`文件进行一次读取，并将文件内所有内容（即所有的键值对）缓到内存的一个`Map`中，接下来所有的读操作，只需要从这个`Map`中取就可以
+
+
+
+##### 3.3.2 Sp可能造成ANR
+- commit() / apply()操作可能会造成ANR问题
+    - commit()是同步提交，会在UI主线程中直接执行IO操作，当写入操作耗时比较长时就会导致UI线程被阻塞，进而产生ANR；
+    - apply()虽然是异步提交，但异步写入磁盘时，如果执行了Activity / Service中的onStop()方法，那么一样会同步等待SP写入完毕，等待时间过长时也会引起ANR问题。
+- 首先分析一下SharedPreferences源码中apply方法
+    > SharedPreferencesImpl#apply()，这个方法主要是将记录的数据同步写到Map集合中，然后在开启子线程将数据写入磁盘
+    > SharedPreferencesImpl#enqueueDiskWrite()，这个会将runnable被写入了队列，然后在run方法中写数据到磁盘
+    > QueuedWork#queue()，这个将runnable添加到sWork(LinkedList链表)中，然后通过handler发送处理队列消息MSG_RUN
+- 然后再看一下ActivityThread源码中的handlePauseActivity()、handleStopActivity()方法。
+    > ActivityThread#handlePauseActivity()/handleStopActivity()，Activity在pause和stop的时候会调用该方法
+    > ActivityThread#handlePauseActivity()#QueuedWork.waitToFinish()，这个是等待QueuedWork所有任务处理完的逻辑
+    > QueuedWork#waitToFinish()，这个里面会通过handler查询MSG_RUN消息是否有，如果有则会waiting等待
+- 那么最后得出的结论是
+    - handlePauseActivity()的时候会一直等待 apply() 方法将数据保存成功，否则会一直等待，从而阻塞主线程造成 ANR。
+
+
+
 
 
 
