--- a/Read/ReadAndroid/01.大型方案/23.ProtoBuf-gRPC实践.md
+++ b/Read/ReadAndroid/01.大型方案/23.ProtoBuf-gRPC实践.md
@@ -1,7 +1,7 @@
 #### 目录介绍
-- 01.网络请求库背景
-    - 1.1 网络库的大背景
-    - 1.2 网络库的对比
+- 01.gRPC学习背景
+    - 1.1 为什么要学RPC
+    - 1.2 RPC是什么
     - 1.3 网络库收益分析
     - 1.4 学习计划说明
 - 02.ProtoBuf的介绍
@@ -37,27 +37,21 @@
 
 
 
-### 01.网络请求库背景
-#### 1.1 网络库的大背景
+### 01.gRPC学习背景
+#### 1.1 为什么要学RPC
+
+
+
+#### 1.2 RPC是什么
 - rpc概述
     - RPC（Remote Procedure Call）-远程过程调用，他是一种通过网络从远程计算机程序上请求服务，而不需要了解底层网络技术的协议。
     - RPC 协议包括序列化、协议编解码器和网络传输栈。
 - gRPC介绍
     - gRPC 一开始由 Google 开发，是一款语言中立、平台中立、开源的远程过程调用(RPC)系统。
-- OkHttp介绍
-    - 最常见的网络请求库。一个处理网络请求的开源项目，是一套处理 HTTP 网络请求的依赖库，安卓端最火热的轻量级框架。
-
-
-
-#### 1.2 网络库的对比
 - rpc和http区别
     - RPC 和 HTTP都是微服务间通信较为常用的方案之一，其实RPC 和 HTTP 并不完全是同一个层次的概念，它们之间还是有所区别的。
     - 1.RPC 是远程过程调用，其调用协议通常包括序列化协议和传输协议。序列化协议有基于纯文本的 XML 和 JSON、有的二进制编码的ProtoBuf。传输协议是指其底层网络传输所使用的协议，比如 TCP、HTTP。
     - 2.可以看出HTTP是RPC的传输协议的一个可选方案，比如说 gRPC 的网络传输协议就是 HTTP。HTTP 既可以和 RPC 一样作为服务间通信的解决方案，也可以作为 RPC 中通信层的传输协议（此时与之对比的是 TCP 协议）。
-
-
-
-#### 1.3 网络库收益分析
 
 
 
