--- a/Read/ReadBlogWiki/02.计划管理/01.为何要做好计划.md
+++ b/Read/ReadBlogWiki/02.计划管理/01.为何要做好计划.md
@@ -139,7 +139,8 @@
 
 
 #### 8.2 无法检查就无法评价
-- 该怎么评价你的工作成效呢？没法评价，因为你没有书面的依据，没有参照物，你如何判断他的位置？于是一团乱麻，你看他每天也在忙忙碌碌，就是没有成效。有一句话说得非常好，你可以假装努力，只是结果是不会陪你玩的。
+- 该怎么评价你的工作成效呢？没法评价，因为你没有书面的依据，没有参照物，你如何判断他的位置？
+- 于是一团乱麻，你看他每天也在忙忙碌碌，就是没有成效。有一句话说得非常好，你可以假装努力，只是结果是不会陪你玩的。
 
 
 #### 8.3 不能评价就不能奖惩
