--- a/Read/ReadBlogWiki/02.计划管理/02.计划拆分为任务.md
+++ b/Read/ReadBlogWiki/02.计划管理/02.计划拆分为任务.md
@@ -13,7 +13,8 @@
 
 ### 01.目标任务的背景
 #### 1.1 概述背景
-- 要想实现目标尤其是在一段时间内需要同时实现多个目标，这并不是一件容易的事。必须要对目标的特性、任务的特性进行充分的分析才有可能保证多个目标同时实现，否则就很容易陷入顾此失彼甚至是一个目标也无法实现的局面。
+- 要想实现目标尤其是在一段时间内需要同时实现多个目标，这并不是一件容易的事。
+- 必须要对目标的特性、任务的特性进行充分的分析才有可能保证多个目标同时实现，否则就很容易陷入顾此失彼甚至是一个目标也无法实现的局面。
 
 
 #### 1.2 为何做目标任务
@@ -45,7 +46,8 @@
 
 
 #### 3.2 要有画面感
-- 对这个目标形成的愿景是否足够清晰，在头脑中是否直接就能视觉化、具象化。就拿我个人来说，比较喜欢写博客，看书后写读书笔记，感觉有成就感。这样一种画面，慢慢烙在脑海中，渐渐就激发起了想要拥有一部作品的目标。
+- 对这个目标形成的愿景是否足够清晰，在头脑中是否直接就能视觉化、具象化。
+- 就拿我个人来说，比较喜欢写博客，看书后写读书笔记，感觉有成就感。这样一种画面，慢慢烙在脑海中，渐渐就激发起了想要拥有一部作品的目标。
 
 
 #### 3.3 目标要具体
@@ -60,7 +62,7 @@
 ### 04.诸多目标间关系
 #### 4.1 短期和长期目标
 - 短期目标和长期目标要一致。比如我想要成为小说家，我的短期目标是什么？就是天天写小说。而长期目标是什么？就是成为小说家，写很多部作品；长期目标是做一个作家孵化公司，那么现在短期目标就是培养作者，推出作者。
-- 不管是婚姻、事业、工作、梦想，短期和长期目标一致，很重要，不然长期目标就是一个假目标。人生做减法比做加法更重要。
+- 不管是家庭、事业、工作、梦想，短期和长期目标一致，很重要，不然长期目标就是一个假目标。人生做减法比做加法更重要。
 
 
 
@@ -71,17 +73,11 @@
 
 ### 05.目标分解成任务
 #### 5.1 规划任务
-- 当目标确定后，就应当把目标转化成要做的具体任务，比如确定了要学习英语要通过自考本科英语考试的目标，那么接下来就应当进行任务划分，比如可以划分为背诵新概念课文、练习短文写作等等具体的任务，注意要把握好目标和任务的层级关系。
+- 当目标确定后，就应当把目标转化成要做的具体任务，比如确定了要学习英语要通过自考本科英语考试的目标。
+- 那么接下来就应当进行任务划分，比如可以划分为背诵新概念课文、练习短文写作等等具体的任务，注意要把握好目标和任务的层级关系。
 
 
-
-#### 5.2 实际案例分析
-- 比如目标是攻克敌方一个集团军，那么任务就应该规划到攻克敌方集团军中的师而不应该再往下细分到攻克敌方的团或者营，任务尽量不要划分得过细，尽量保证完成一个任务可以让人感觉到很明显地向目标前进了一大步，也可以将任务理解成一个次级目标。
-- 再比如婚恋方面的脱单目标，可以把它划分成大量收集异性资源的任务、自身形象气质提升的任务、与异性话题以及兴趣爱好培养的任务等等，那么每完成一个任务就等于向脱单目标推进了一大步。
-
-
-
-#### 5.3 必须把目标细化
+#### 5.2 必须把目标细化
 - 细化的好处是什么？就是让长期目标变得容易实现。比如：我要成为作家，我想要成为什么样的作家？将大目标分解成每个月、每天的小目标，以及当下的目标。
 - 我要成为作家，怎么细化它。比如：我想成为作家，我打算先写10年；打算每年写2部作品；打算每半年写出1部作品；打算每个月写3万字；打算每天写1000字；打算每天9点写完。
 - 这就是细化，现在是不是觉得成为作家也是可以的，而且很简单。这样你还会焦虑吗？基本不会了。为什么呢？因为目标明确，可执行。
@@ -95,14 +91,16 @@
 
 
 #### 6.1 什么是重要的任务
-- 什么是重要的任务，比如说java进阶学习的具体任务划分为学习jvm、学习高并发、学习javase，jvm是java底层核心技术，要想深入学习javase和高并发技术就必须对jvm有比较深入的理解，也就是说jvm的学习深度限制了高并发和javase的学习深度，因此可以说jvm学习任务是java进阶学习最重要的任务。
+- 什么是重要的任务，比如说java进阶学习的具体任务划分为学习jvm、学习高并发、学习javaE。
+- jvm是java底层核心技术，要想深入学习javaE和高并发技术就必须对jvm有比较深入的理解，也就是说jvm的学习深度限制了高并发和javaEE的学习深度，因此可以说jvm学习任务是java进阶学习最重要的任务。
 
 
 
 #### 6.2 完成任务时间
 - 研究自己可用来完成任务的时间就是研究自己除了吃饭、睡觉、工作、休息等必要时间之外的可用来完成任务的总时间有多少以及构成总时间的成分，总时间不必多说，主要说下构成总时间的成分。
 - 就我个人而言，我的可用来完成任务的时间成分主要包括在家的时间、在地铁上的时间、上班期间可争取用来完成任务的时间，显然这三类时间的性质是不同的。
-- 比如在家时间是几乎可以去执行所有的任务，在地铁上的时间可以执行的任务就会受到很大限制比如学习英语的任务、学习编程的任务、健身减肥的任务则是不能在地铁上执行的，然后上班期间可争取用来完成任务的时间则受到极大的限制基本只能限定在执行学习编程的任务上，弄清楚这些可用来完成任务的时间的不同性质之后，可以根据不同的时间性质来安排不同的任务。
+- 比如在家时间是几乎可以去执行所有的任务，在地铁上的时间可以执行的任务就会受到很大限制比如学习英语的任务、学习编程的任务、健身减肥的任务则是不能在地铁上执行的。
+- 然后上班期间可争取用来完成任务的时间则受到极大的限制基本只能限定在执行学习编程的任务上，弄清楚这些可用来完成任务的时间的不同性质之后，可以根据不同的时间性质来安排不同的任务。
 
 
 
