--- a/Read/ReadBlogWiki/03.建立体系/03.思维导图的实践.md
+++ b/Read/ReadBlogWiki/03.建立体系/03.思维导图的实践.md
@@ -1,6 +1,7 @@
 #### 目录介绍
 - 01.什么是思维导图
-
+- 05.思维导图的技巧
+- 06.思维导图的作用
 
 
 ### 01.什么是思维导图
@@ -10,10 +11,24 @@
 
 
 
+### 05.思维导图的技巧
+- 思维导图是一种非常有用的工具，可以帮助我们更好地组织和表达我们的想法。以下是一些使用思维导图的技巧：
+- 开始前，先确定主题或中心思想。思维导图的中心是你的主题，所有的分支都应该与它相关。
+- 使用简洁的关键词和图标。思维导图应该是简洁明了的，使用简单的关键词和图标可以帮助你更快地理解和记忆。
+- 使用颜色和形状来区分不同的分支。这可以帮助你更好地区分不同的想法和概念。
+- 保持简洁和有序。思维导图应该是简洁和有序的，不要在一个分支上添加太多的信息，否则会让思维导图变得混乱。
+- 练习使用思维导图。使用思维导图需要一些练习，所以不要害怕犯错。随着你的练习，你会变得越来越熟练。
+- 总之，思维导图是一种非常有用的工具，可以帮助你更好地组织和表达你的想法。通过练习和使用这些技巧，你可以更好地利用思维导图来提高你的思维能力和创造力。
 
 
-
-
+### 06.思维导图的作用
+- 思维导图是一种图形化的工具，可以帮助人们更好地组织和表达他们的想法。以下是思维导图的一些主要作用：
+- 帮助组织思路：思维导图可以帮助人们将复杂的信息和想法组织成一个清晰的结构，使人们更容易理解和记忆。
+- 提高创造力：思维导图可以帮助人们发掘新的想法和概念，激发创造力和创新能力。
+- 促进沟通：思维导图可以帮助人们更好地沟通和交流，特别是在团队合作和项目管理中。
+- 改善学习效果：思维导图可以帮助人们更好地理解和记忆学习材料，提高学习效果。
+- 提高效率：思维导图可以帮助人们更快地完成任务和决策，减少混乱和错误。
+- 总之，思维导图是一种非常有用的工具，可以帮助人们更好地组织和表达他们的想法，提高创造力和效率，促进沟通和学习。
 
 
 
