--- a/Read/ReadBlogWiki/04.执行策略/14.四维度总结分析.md
+++ b/Read/ReadBlogWiki/04.执行策略/14.四维度总结分析.md
@@ -6,7 +6,8 @@
 - 05.从数据维度分析
 - 06.从技术维度分析
 - 07.从成长维度分析
-- 08.最后总结一下
+- 08.三条总结说事情
+- 09.最后要总结一下
 
 
 
@@ -82,8 +83,37 @@
 - 随着做的项目越来越多，你通过总结得到的业务理解信息和能力也越积越多，到了一定阶段就可以量变导致质变，业务理解能力大大提升。
 
 
+### 08.三条总结说事情
+#### 8.1 如何快速说总结
+- 做总结可以说是我们日常工作中非常重要的事情了，但却不是人人都能做得好，毕竟这个世界上，把简单问题复杂化很容易，而把复杂问题简单化很难。
+- 那究竟如何做好总结呢？不管是什么总结，大到公司三年战略规划，小到如何接客服电话，一律要求用三条说清楚。三条总结，不是总结出最重要的三点，而是用三点把所有的事情说清楚。
 
-### 08.最后总结一下
+
+#### 8.2 三条总结法
+- 第一，唯有简单，才能被理解；唯有被理解，才能被记忆；唯有被记忆，才能被执行。
+- 现代社会是一个信息爆炸的社会，也是一个快节奏的社会，没有人有耐心花十分钟看完一篇文章，也没有人有兴趣去记忆十几、几十条原则。所以注定，唯有简单，才能有效。
+- 第二，任何事情，如果你不能用三条说明白，说明你还没有想清楚。
+- 有人会认为，简单的问题可以三条总结，复杂的问题做不到三条总结。这恰恰是我们要解决的问题，我们追求的就是把最复杂的问题能用三条说清楚。
+- 第三，我们说的三条总结，是只用三条说清楚所有问题。
+- 而不是总结了十条然后选取其中最重要的三条，后面还有七条八条，合起来才能够把问题说清楚。
+
+
+#### 8.3 如何做到三条总结
+- 有人会认为，简单的问题可以三条总结，复杂的问题做不到三条总结。这恰恰是我们要解决的问题，我们追求的就是把最复杂的问题能用三条说清楚。
+- 那如何才能做到三条总结呢？非常重要的一点就是，归纳、总结、提炼，再归纳、再总结、再提炼。
+- 把问题总结为十几条之后，再进行分析，看是否可以进一步进行总结，如果站在更高些的高度，哪些问题属于细枝末节哪些属于核心问题，核心问题中是否有些问题还是属于同类项，可以合并？
+- 再进行分析，让自己再向后退站到更高的高度进行归纳、总结和提炼，看看哪些问题属于细枝末节，哪些属于核心问题，核心问题中是否可以进一步合并同类项，最终形成三条总结。
+- 这三条涵盖了问题的所有方面，是我们理解这个问题以及掌握这个问题的关键。掌握了这三条，就掌握了这个问题。
+- 归纳、总结、提炼，这是非常重要的逻辑分析能力，它们的基础是常识和逻辑。而常识和逻辑是我们一切思维的基础，超越常识就是骗局，不合逻辑必有问题。
+
+
+#### 8.4 三条总结法收益
+- 三条总结的过程，也是一个逼迫自己不断向上攀登认知更高峰的过程，对越复杂问题进行三条总结，越需要你站在更高的高度，进行更高水平的归纳总结和提炼。
+- 完成了对越复杂问题的三条总结，也就完成了一次自己认知的越大飞跃。
+
+
+
+### 09.最后要总结一下
 - 汇报工作成果时有四个常见的误区：只有结果没有效果；效果只有很虚的描述，没有具体数据；对给出来的数据没有自己的理解和判断。
 - 4D 总结法就是从结果、数据、技术和成长这 4 个维度（Dimension）来整理自己的做事收获，展示工作上的亮点。
 - 当总结数量积累到一定程度的时候，还可以再系统地整理一下，写成文章发表或者拿去给团队做培训，那样效果会更好。
