--- a/Read/ReadBlogWiki/05.表达提升/04.沟通能力的演进.md
+++ b/Read/ReadBlogWiki/05.表达提升/04.沟通能力的演进.md
@@ -1,14 +1,41 @@
 #### 目录介绍
-- 06.尝试开放式提问
+- 01.什么是沟通能力
+- 05.别总封闭性问题
+- 06.沟通中合理提问
+- 07.三明治的沟通法
+- 08.螺旋推进沟通法
+- 09.沟通效果的划分
 
 
 
 
+### 01.什么是沟通能力
+- 人类是社会动物，人与人、人与群体通过“沟通”传递信息和情感。沟通可以获取或传递信息和知识，也可以促成一致观点或协议，最重要的是有助于情感管理。
+- 街头大妈们家长里短地唠嗑，能不能叫“沟通”？大学课堂上教授口若悬河、滔滔不绝地讲课，能不能叫沟通？
+- 大妈聊天漫无目的，最多是“多向信息交流”，不是“沟通”；教授讲解虽有目的，但如果没有跟学生互动，那也不算是“沟通”。
+- 什么是沟通呢？沟通是“有目的的多向信息交流”。沟通的方式一定是谈话吗？不是，能交流信息即可，不拘泥于形式。
+- 在沟通过程中要时刻有意识地提醒自己：沟通是有目的的：你的初衷是什么？你现在的行为和言语有没有妨碍你完成你的初衷？沟通是多向信息交流：你有让对方了解到你的真实想法吗？你了解到对方的真实想法了吗？
 
 
 
-### 06.尝试开放式提问
-#### 6.1 不要把天聊死
+### 05.别总封闭性问题
+#### 5.1 不要问封闭问题
+- 不要问封闭问题。问对方的问题大多数都是封闭式的话题，让对方只能从我们给出的选择当中进行回答。聊天当中，很多时候我们问对方的问题，其实都是一个封闭的问题。
+- 什么叫做封闭性问题。就是在问题当中给了对方一个选择，让对方非此即彼，只能选择“是”或者“不是”，“有”或者“没有”，“好”或者“不好”等等。
+- 比如，“你喜欢吃橙子吗？”这就是一个封闭性的话题，因为对方只有“喜欢”或者“不喜欢”两种选择。
+
+
+#### 5.2 开放性话题
+- 破除聊天当中傻瓜式的选择。开放性话题则是让对方主动说出来，而不是被动的选择，开放性话题让对方有更多表达的可能，而不是在已经给出的选择当中作出简单的回复。
+- 比如：“看你去了那么多地方，你最喜欢的是哪里呀？”。这个问题就是一个开放性的问题，它更容易让对方说出自己最喜欢的地方，甚至说出喜欢的理由。
+
+
+#### 5.3 多用开放性话题
+- 当然，对于封闭性的话题，如果对方很会聊天，他也可能不会规规矩矩的回答。但是，如果我们遇到这样会聊天的人，可能也就不需要费尽脑汁去做那么多了。
+- 比如：你可能会问“你周末的时候会去健身吗？”。给对方两种选择，会或者不会。但是如果你换成“你周末休息的时候，一般最喜欢做什么呀？”，就给了对方发挥的空间，给了他无数的可能。
+- 在不知道对方最想说的话题是什么的时候，尽量用开放性话题去探索寻找，不要给对方限定范围，让他只能被动从当中选择。让我们的思维从一个封闭的空间进入到一个开放的空间，也是给生活重新开了一扇门。
+
+#### 5.4 不要把天聊死
 - 很多时候，朋友开心地说去动物园玩的好开心呀，得到地回答有以下几种。虽然也算是积极回应，但是这样的情况下经常就把天聊死了。
 - 1、哇！你去动物园了啊！真棒！2、真的啊！动物园玩的好嗨。3、真的啊！那你有没有看到大象啊，怎么样好看不？
 - 当别人打开了一个话题，让对话流动起来，多进行情感呼应、运用社交语言和开放式提问，让对话生动起来。正确的积极回应可以这样：
@@ -19,7 +46,79 @@
 
 
 
+### 06.沟通中合理提问
+- 会提问的人通常都是沟通达人，他们可能在沟通时说话不多，但往往能提出一些发人深省的问题，让你打开一个新世界的大门。所以，善于提问的人才是真正引导沟通方向的人。
+- 一般来说，提问的方式有四种，不同的场合、环境、目的需要采用不同的提问方式。
+- 封闭式：你同意这个方案吗？我们能按期完成这个任务吗？
+- 开放式：你有什么好的建议吗？
+- 引导式：如果资源的问题解决了，你第一步打算怎么做？
+- 反问式：我想问一下，这个需求开发排期是怎么样的？那业务的运营节奏是怎样的呢？
 
+
+
+### 07.三明治的沟通法
+#### 7.1 什么是三明治沟通
+- 关于沟通，如何提出自己的要求和建议，以前看到过“三明治”沟通法，即把好的放在上下，把不好的夹在中间。因此，当我们希望对方改变什么的时候，可以通过这样的方式来进行。
+
+
+#### 7.2 三明治沟通操作
+- 大概做法：首先先认可对方好的一面，然后提出对方改变的地方，最后再表明对方改变之后更好的样子。
+- 首先：你这个人很好，很努力很漂亮很温柔。这是肯定赞美她。首先肯定对方身上好的地方，让对方飘入云端。
+- 然后：但是，如果你能不能不熬夜到凌晨。这是指出对对方的要求和希望。委婉的道出对方身上不好的一些地方，在肯定之后再说出来，会让对方感受更好。
+- 最后：那你就真的十全十美啦。这是最后的肯定。对对方改变之后的肯定和高度的赞美。
+- 用“三明治沟通法”，先认同，赏识，肯定，关爱他的积极面，再加上鼓励，希望，信任她的有待完善的另一面。
+
+
+#### 7.3 不要一味地批评
+- 一味的批评更容易让人产生抵抗的情绪。三民治沟通法把一味的批评和指责变成了站在对方角度思考问题，然后合理的提出期待。不仅不会挫伤对方的自尊和积极性，还能激活对方主动改变的效率。
+- 好好说话就包括明确的表达自己，说出的话不会伤害别人，能让别人有很好的体验。我觉得这个三明治沟通法，不仅仅适合谈恋爱中的某些场景，同样也适合我们工作和生活中的沟通。
+
+
+### 08.螺旋推进沟通法
+- “螺旋推进”模型的方法论梳理。“螺旋推进”模型是一种非直线型、迂回推进的沟通模型，它侧重沟通的流程，它的基础概念包括四个重要因素：安全氛围、监控器、共识线、情感线。
+- 安全氛围是指，在整个沟通过程中，你与对方都拥有“安全感”，这是沟通的前提条件。为此你要表现出对对方足够尊重，并让对方觉得你是一个值得信任的人。
+- “监控器”不是要你真装一个摄像头，这是一个只存在于你脑海中的假想物，它给你一个上帝视角，让你客观、全局地审视“这次沟通”。当沟通出现问题时，你能第一时间发现，而不是等到“场面失控”“对方拒绝沟通”时才意识到问题。
+- 共识线和情感线是存在于沟通过程中的两条推进线路，成功的沟通必然能让这两条线路共存。无论是“共识线”还是“情感线”发生问题时，都要用“螺旋推进”的方式，解决问题。
+
+
+#### 8.1 构建安全氛围
+- 第一步：构建安全氛围。沟通前先要确保双方心平气和，愿意敞开心扉。
+- 如果你有问题在先，对方很可能处于消极对抗的状态，此时不要着急跟对方解释，也不要埋怨对方，而是先让对方相信：你很在意他的想法，这次沟通你带着十分的诚意，不会敷衍塞责。等他心绪平静下来时，再往下推进。
+
+
+#### 8.2 构建共同目标
+- 第二步：构建共同目标。要让对方感觉到“你们有共同的目标，沟通成功对双方都有利”。
+- 这一步要避免两个雷区，一是越过第二步，直接进入第三步分析问题，这会让对方对你的动机产生怀疑，分析问题时，他就会有所保留，并在过程中不断试探你的真实动机。
+- 二是让他觉得你是“只为达成自己的目的而来”，当遇到“利益冲突”的时候，这就很致命。
+- 当你在推进“构建共同目标”的过程中如果因为措辞不当，或者对方没感受到你的诚意等原因，导致对话失去了“安全氛围”，此时你要退一步，重新“构建安全氛围”。
+
+
+#### 8.3 分析当前问题
+- 第三步：分析当前问题。分析当前问题和交流解决方案是这次沟通的主要内容。
+- 在问题和问题的原因没有完全浮出水面时，不要着急讨论方案。原因是：你们可能看到的是表面问题，没看到本质问题；你们可能看到了部分问题，没看到全部问题；问题的原因是多样的，与问题一样需要找到本质原因与全部原因。
+- 解决方案是针对问题来的。要记住沟通是有目的的多向信息交流，信息交流是表达与倾听构成的，倾听的目的是为了理解信息。
+- 所以，不要只听对方说了什么，还要考虑他是怎么说的，观察对方的语气、语调、表情、动作等传递的信息，推测他的真实想法。当你发现他并未坦露心扉时，则需要引导他表达、分享。
+
+
+#### 8.4 交流解决方案
+- 第四步：交流解决方案。交流解决方案时，无论谁提出解决方案，都要带着这样一种心态：“这是我的建议，我希望得到你的反馈，以便设计出更符合我们共同目标的方案。
+- ”永远不要陷入“二选一”陷阱里，要坚信“第三种方案”能让大家都满意。在交流解决方案这一步 ，容易陷入两个误区。
+- 第一个误区是“只要对方满意就好，我可以委屈自己”，这是典型的老好人心态，你完全可以表达出自己的合理需求。试想一下，如果你不表现出你的不满意，后续你的情绪、肢体语言等也会暴露你的伪装，到时对方看到你的不开心，就会失去兴致。与其这样，何不在交流解决方案时就制定一个“让大家都开心的方案”呢？
+- 第二个误区是不愿 / 不敢表达观点。这在多人会议中很常见，他们或许个人能力不错，但在跨团队、跨部门的大会上，总是一声不吭，会上定出的方案后来效果不好时，他们就做“事后诸葛亮”，开始各种吐槽。这会给其他人留下一种印象：“不愿说证明他自私，不敢说证明他性格软。”
+
+
+#### 8.5 达成最后协议
+- 第五步：达成最后协议。达成协议后你要充分尊重这个“最后的协议”，并带头执行，这样可以建立良好的信任关系。
+- 下次沟通其他事情时，你会在“构建安全氛围”和“构建共同目标”这两个过程花费更少的时间。
+
+
+
+### 09.沟通效果的划分
+- 一次成功的沟通，有什么样的特点呢？从情绪体验和信息匹配的维度上，可以把沟通划分成四个区域：
+- 安慰区：安慰区的情绪体验好，但信息一致度不高。这可能是沟通的启动状态，或者沟通表面和谐，但大家互相“打哈哈”，没在深层次上达成共识；
+- 目标区：这是期望达到的状态；
+- 破坏区：这是非常糟糕的情形，没达成任何共识，且场面十分不和谐，争吵激烈，或者干脆沉默、冷暴力；
+- 风险区：这是共识达成，但人际关系变差的情形。虽然达成了共识但最终因团队无法齐心协作而难以执行。
 
 
 
