--- a/Read/YCBlogWiki/test/04.adb命令大全说明.md
+++ b/Read/YCBlogWiki/test/04.adb命令大全说明.md
@@ -3,6 +3,7 @@
 - 02.adb命令截图
 - 03.adb安装应用
 - 04.adb清app缓存
+- 05.adb通过WiFi调试
 - 06.adb问题分析
 
 
@@ -54,15 +55,55 @@
   - pm clear com.tencent.wx
 
 
+### 05.adb通过WiFi调试
+- 前提条件
+    - 1.在同一Wi-Fi情况下；2.adb 环境已配置；3.设备已通过USB连接电脑
+- 第一种方式：通过命令行调试
+    - 1、首先将电脑和手机连接同一个WIFI，并插上数据线
+    - 2、打开电脑CMD,输入命令adb start-server开启adb服务
+    - 3、输入adb devices 查询已连接的设备【这一步没有usb连接怎么办？】
+    - 4、输入adb tcpip 5555 四个5代表的是默认端口 ， 也可以改
+    - 5、到了这一步就可以拔掉数据线了 拔掉后输入 adb connect 手机WIFI IP地址:端口号。例如： adb connect 192.168.1.39:5555
+    - 6.结果为connected to 192.168.1.39:5555 代表连接成功。这时候再次打开Android Studio就可以直接运行了，不用插数据线了
+- 第二种方式：插件
+    - 1.打开File->perfrence->plugins->Browse repositories…->搜索 adb wifi->点击安装
+    - 2.先用最普通的方式，用USB连接线，将手机和电脑连接，并成功被AS识别。
+    - 3.View->Tool Windows->ADB Wifi。会出现Wi-Fi连接设备面板。只要显示连接上了，就可以拔掉电脑和手机之间的USB连接线了。
+- 第三种方式：开启无线ADB调试
+    - 1.打开Android设备的开发者选项并启用无线ADB调试。找到“开发者选项”并进入该选项卡。找到并启用“无线ADB调试”选项。
+    - 2.确保Android设备和PC端在同一局域网内，并查找Android设备的IP地址。
+    - 3.连接Android设备和PC端。在PC端的命令行工具中输入以下命令：adb connect 192.168.1.39
+- USB调试模式与WIFI调试模式切换
+    - adb usb 切换到USB模式
+    - adb tcpip 5555 切换到WIFI无线调试
+- WIFI 无线调试下 连接与断开连接的指令
+    - adb connect 192.168.0.181 连接设备
+    - adb disconnect 192.168.0.181 断开设备连接
+- 遇到问题1:adb: device offline
+    - adb已经连接上设备，但是是离线模式。adb: device offline。
+    - 第一种方案：输入adb kill-server关闭服务后再输入 adb start-server开启服务。重新连接设备。
+    - 第二种方案：换USB线和USB口拔插，撤销usb授权重试，关闭开发者模式再开启等等都可以试试。
+- 遇到问题2:error: more than one device/emulator
+  - 报错原因：报错说的很清楚，有多个设备同时连接了电脑。
+  - 解决方法：执行 adb 指令的时候，指定执行的设备，就OK了。比如：adb -s xxxxxx shell ps 21190 注意：其中的 xxxxxx 就是你的设备序列号
+  - 获取序列号的方法，执行 adb devices。
+
+
 
 ### 06.adb问题分析
 - 问题描述：adb执行报错
   - Mac上使用 adb 调试Android设备时，出现了 zsh: command not found: adb 的报错提示。
   - 出现上述错误代表 adb 无法在挡枪 的shell 中使用，而当前的 shell 为 zsh 。
 - 方案一：修改 zsh 为 bash
-  - 执行下面命令将默认shell改成 bash ： chsh -s /bin/bash 
-  - 接着调用下面命令立即应用bash的配置文件： source ~/.bash_profile 
-  - 执行adb shell 测试可以正常使用 adb 命令了。
+    - 执行下面命令将默认shell改成 bash ： chsh -s /bin/bash
+    - 接着调用下面命令立即应用bash的配置文件： source ~/.bash_profile
+    - 执行adb shell 测试可以正常使用 adb 命令了。
+- 方案二：配置 zsh 终端
+    - 执行 touch ~/.zshrc 命令检查是否已有 .zshrc 文件，如果没有则会自动创建文件。
+    - 接着执行 open ~/.zshrc 命令打开文件或者使用 vi 进行编辑。
+    - 在文件中输入 source ~/.bash_profile 这一行命令文本。
+    - 执行 source ~/.zshrc 立即应用文件修改。
+    - 执行adb shell 测试最后可以正常使用 adb 命令了。
 
 
 
