--- a/Read/Management/02.管理落地/06.管理之向上沟通.md
+++ b/Read/Management/02.管理落地/06.管理之向上沟通.md
@@ -4,9 +4,11 @@
 - 03.拿捏不好的分寸
 - 04.难领会上级意图
 - 05.影响上级的决策
-- 06.辅助领导拆方案
-- 07.向上沟通的注意
-- 08.向上管理的精髓
+- 06.向上沟通的难点
+- 07.向上沟通的案例
+- 08.高效向上去沟通
+- 09.向上沟通的注意
+- 10.向上管理的精髓
 
 
 
@@ -45,6 +47,7 @@
 - “上级不懂业务，还喜欢拍板做决策，怎么应对？”
 
 
+
 ### 02.能不聊就不去聊
 - 关于“和上级能不聊就不聊”。你不难发现，无论是所谓的“上级太忙了”，还是“找不到上级”，甚至干脆认为就不该和上级沟通，归结起来，都是没有意识、意愿或能力和上级建立良好的“沟通通道”。那么如何建立良好的沟通通道呢？你可以从以下四个方面来着手和审视。
 - 第一，沟通意愿。这是基本前提。作为一名工程师，你不主动和上级沟通问题也不大，因为上级一般会有意识地主动和你沟通。但是，如果作为一名管理者，你还不主动和上级沟通的话，那就相当于已经上大学了，还要家长和老师逼着做作业一样。又如何指望你能带领别人往前走呢？
@@ -55,13 +58,12 @@
 
 
 ### 03.拿捏不好的分寸
-- 关于“拿捏不好该不该和上级聊的分寸和尺度”。每个人在评判“该不该聊”的时候，都是基于自己的管理常识，而每个人在和不同的上级打交道的过程中，形成的常识是不同的。
+- 关于“拿捏不好该不该和上级聊的分寸和尺度”。每个人在评判该不该聊的时候，都是基于自己的管理常识，而每个人在和不同的上级打交道的过程中，形成的常识是不同的。
 - 大多拿捏不好“该不该聊”这个问题的情况，都是由于还没有厘清自己想通过这次沟通拿到什么，即沟通的目的和初衷不清晰。
 - “最近取得了一个不错的成绩，要不要和上级说一说呢？”这时你可以问下自己：“我是想就此向上级表达我很有成就感？”
 - “感觉自己离技术越来越远，有些焦虑，是不是可以把上级当作朋友来聊聊呢？”这时你可以问下自己：“我是想就此寻求上级的支持和帮助，成功地让他给我一些建议？”
 - “某项目很可能会 delay，上次和领导打过招呼了，他不置可否，随着形势越来越严峻，我要不要再跟他说一次呢？”这时你就可以问下自己：“我是想就这个问题再和他做一次信息同步，如果有可能，我会进一步说服他给我提供一些资源和支持吗？”
-- 在这类问题上，我们无法去评判哪个目的更重要，或者更应该和上级聊，因为我们不是当事人，只有当事人自己才最清楚这个目的对他来说意味着什么。所以，我唯一能做的，就是给你这个方法帮你厘清沟通的目的，至于每个目的有多重要，你还可以问自己两个问题：
-- **这次沟通能给你带来什么价值？这次沟通能给上级带来什么价值？然后，你根据自己的目的，做出自己的选择和判断吧**！
+- 在这类问题上，无法去评判哪个目的更重要，只有当事人自己才最清楚这个目的对他来说意味着什么。至于每个目的有多重要，你还可以问自己两个问题：**这次沟通能给你带来什么价值？这次沟通能给上级带来什么价值？**
 
 
 ### 04.难领会上级意图
@@ -74,45 +76,84 @@
 - 为了达到“输出影响”这一目的，你可能会根据上级的风格去选取合适的沟通方式，根据上级的关切去选取合适的内容和呈现逻辑，并根据上级的状态去选取合适的沟通时机，等等。那么，如何才能有效地对上级实施影响呢？我给大家用下面的冰山模型做一个提示：
 - ![image](https://static001.geekbang.org/resource/image/00/d6/0087b764fb5d809a0219e396a443e5d6.png)
 - 从上图你不难看出，说服一个人时，沟通技巧是在“术”的层面起作用；而对说服效果影响更大的因素，却是水面下的冰山，即“势”的部分，也就是你对他的影响力如何。
-- 当你对他的影响力很小的时候，你的技术和方案再优秀，影响力也是非常有限的。举个例子，对于一个完全相同的建议，一线工程师提给 CEO，和 CTO 提给 CEO，极有可能是完全不同的结果。
+- 当你对他的影响力很小的时候，你的技术和方案再优秀，影响力也是非常有限的。
+- 举个例子，对于一个完全相同的建议，一线工程师提给 CEO，和 CTO 提给 CEO，极有可能是完全不同的结果。
 
 
 
-### 06.辅助领导拆方案
-- 直属领导和几个组长开会，第一句话就把他噎到了：这个月每个组的营销额目标，在原基础上涨 20%，会有一些困难，大家想想办法。听到这话，在场的组长们一片哀嚎，很多人脱口而出：这根本不可能完成啊……
+
+### 06.向上沟通的难点
+- 第一个难点来自于传统观念，俗话说“官大一级压死人”，很多职场人一想到向上级沟通，就开始犯怵，甚至是焦虑；
+- 第二个难点是缺乏主动性，平时不主动汇报，等到出大事，自己兜不住再去找上级汇报，这样只会延误了最佳的战机；
+- 第三个难点是信息片面，向上级沟通时，由于自己获取的信息有限，很容易做出片面，甚至是错误的判断；
+- 第四个难点是直线思维，如果你在向上沟通的过程中，不认同对方的观点，或是不认同对方的处理方式，最好不要在公开场合正面怼，可以在会后私下沟通，在执行过程中进行修正。
+
+
+
+
+### 07.向上沟通的案例
+- 直属领导和几个组长开会，第一句话就把他噎到了：这个月每个组的营销额目标，在原基础上涨 20%，会有一些困难，大家想想办法。
+- 听到这话，在场的组长们一片哀嚎，很多人脱口而出：这根本不可能完成啊……
 - 没想到，一直沉默的同事老牛说：老大，我觉得要完成目标，需要做几件事——1.大家可以先盘点一下手头上的资源，包括人力、预算、可以协助的团队等等；2.然后我们开会做个目标拆解，把整个月的目标拆解到每周和每天，把控好进度；3.最后看看，要完成每天、每周的进度，需要哪些资源，再请老大帮忙申请一下资源。
 - 领导向他投去赞许的目光，欣然同意了这个方案。**当领导遇到难题时，听到大家都在抱怨、推诿，这时候有一个人站在领导身边，想方设法借助领导的资源，去摆平困难，把不可能变成可能**。不得不说，这种懂得向上管理的人，谁都愿意倾力相助。
 
 
-### 07.向上沟通的注意
-#### 7.1 沟通保持简洁
+
+### 08.高效向上去沟通
+#### 8.1 内容精简扼要
 - 沟通交流方式一定要尽量保持简洁。管理者的级别越高，其它级别的员工在沟通工作中，就越需要跟他们传达更简洁有用的信息。
 - 中高层管理者在面对海量信息时，必须要筛选大量信息，把注意力集中在最有用和最重要的内容上。他们不希望在已知信息的基础上，被海量杂乱信息所干扰。
 - 作为下属，在当面沟通、发送电子邮件、打电话或者写备忘录的时候，务必做到言简意赅。此外，还必须根据老板的喜好，调整有关工作汇报的频次。
 
 
-#### 7.2 分享重要好消息
+#### 8.2 直奔主题
+- 汇报一开始就要开门见山地陈述自己的观点或要求，然后再罗列理由和证据，最后再重新陈述一下自己的观点即可。
+- 这也是经典的 PREP 结构：Position（观点）、Reason（理由）、Evidence（证据）、Position（观点）。
+- 这个方法出自麦肯锡的 30 秒电梯理论，能帮你快速把想表达的事情说清楚、讲明白。
+
+
+#### 8.3 做好充分准备
+- 你需要在汇报之前，把相关信息都了解清楚，如果信息掌握得不够全面，很容易在汇报的时候被问得哑口无言，不仅会影响汇报进度，还会给对方留下不尽职的印象。
+
+
+#### 8.4 掌握10/30原则
+- 如果你有 30 分钟的时间可以支配，那么汇报时间最多占用 10 分钟，剩下的 20 分钟留给大家一起讨论。很多时候，能够产生价值的信息往往会在讨论时间内产生。
+
+
+
+### 09.向上沟通的注意
+#### 9.1 分享重要好消息
 - 缺乏安全感的员工，总是倾向于跟上司分享所有的好消息。一个在时间管理方面有很大挑战的上层管理者，肯定不希望了解所有的好消息。
 - 对于一些不重要的好消息，你可以在沟通对话结束之际稍微提及。至于非常重要的好消息，那你就不应该有所犹豫，要在第一时间跟上司分享。
 
 
-#### 7.3 诚实谨慎分享坏消息
+#### 9.2 诚实谨慎分享坏消息
 - 在向老板分享坏消息之前，一定要仔细思考该说些什么内容，如何去表述这个坏消息，并提出可以采取的改善措施，从而将负面影响控制到最低。
 - 如果你隐藏或者扭曲重要的事实，只会导致上司对你的不信任。
 
 
-#### 7.4 归类整理重要信息
+#### 9.3 归类整理重要信息
 - 一定要把最重要的信息归类整理起来，务必要注明日期。信息整理可以通过传统的纸质形式归类整理，也可以通过电子文档的方式来整理。
 - 如果某个问题非常重要的话，最好打印一份，摆放在老板的办公室桌面。
 - 对于上层管理者而言，由于每天可能会接触过量的信息，因此，他们有可能会忘记这份文件，甚至可能会忘记关于这个问题相关的讨论。
 - 因此，在这种情况下，注明日期的已归档文件，就相当于是一份保险，有助于员工做好后续工作的跟进与落实。
 
 
-### 08.向上管理的精髓
+### 10.向上管理的精髓
+#### 10.1 跟领导同一战线
 - 真正的向上管理，不是讨好领导、唯命是从，而是你能与领导站在同一条战线，拥有同样的视野，一起为共同的目标而努力。
 - 在这个过程中，你通过调配领导的资源，有能力去做更有价值的事情，也因此增加了你的不可替代性，最终你和领导相互成就，职业生涯也能走得更远。
-- 成就上级从而成就自己。工作使大家走到了一起，同事首先就是一种合作关系。上级所掌握的资源和影响力，对人在职场中的发展起到了决定性作用。职场上快速发展的人无疑都是善于和上级合作的，他们在做好份内事的同时，会积极帮助上级排忧解难。上级也会把更多的锻炼机会提供给他们，把自己的真经传授给他们。他们会逐步熟悉上级的工作内容和技巧，而这些都是一个人得到快速发展的重要条件。
-- 主动争取机会。成就上级从而成就自己绝对是一条重要的原则。当你在为上级偏心而抱怨时，是否该认真反思一下自己遵循了这个原则。机会真的不会从天而降的，更多时候要靠自己去争取。
+
+
+#### 10.2 成就领导就是成就自己
+- 成就上级从而成就自己。工作使大家走到了一起，同事首先就是一种合作关系。上级所掌握的资源和影响力，对人在职场中的发展起到了决定性作用。
+- 职场上快速发展的人无疑都是善于和上级合作的，他们在做好份内事的同时，会积极帮助上级排忧解难。
+- 上级也会把更多的锻炼机会提供给他们，把自己的真经传授给他们。他们会逐步熟悉上级的工作内容和技巧，而这些都是一个人得到快速发展的重要条件。
+
+
+#### 10.3 主动争取机会
+- 主动争取机会。成就上级从而成就自己绝对是一条重要的原则。当你在为上级偏心而抱怨时，是否该认真反思一下自己遵循了这个原则。
+- 机会真的不会从天而降的，更多时候要靠自己去争取。
 
 
 
