--- a/Read/ReadAndroid/01.大型方案/37.自动切换网络方案实践.md
+++ b/Read/ReadAndroid/01.大型方案/37.自动切换网络方案实践.md
@@ -15,7 +15,8 @@
     - 3.4 模块依赖关系
 - 04.原理解读研究
     - 4.1 网络管理机制
-
+- 05.遇到的问题
+    - 5.1 打开Wi-Fi失败
 
 
 ### 01.整体概述
@@ -90,7 +91,15 @@
     - 因为毕竟系统中还有wifi，以太网、Mobile等网络，破坏了原有评分系统，会导致很多side effects。
 
 
+
 #### 2.4 Wi-Fi切换&连接
+- 项目中有通过已知WiFi名称和密码连接硬件设备WiFi，实现数据交换的需求。
+    - 给定WiFi名称，连接无密码的网络
+    - 给定WiFi名称 和密码，连接网络 （需指定密码类型 wpa 或者web ）
+- 连接Wi-Fi的大概步骤
+    - 第一步：打开、关闭WIFI。WiFi的打开和关闭用的 WifiManager 类中的setWifiEnabled方法实现。
+    - 第二步：WiFi连接。输入WiFi名称、密码实现连接。
+    - 第三步：断开WIFI连接。断开WiFi连接有两种方法：暂时断开，可以重连；断开，不可以重连，忘记密码。
 
 
 
@@ -110,9 +119,22 @@
 
 
 
+### 05.遇到的问题
+#### 5.1 打开Wi-Fi失败
+- 对启用和停用 WLAN 实施了限制
+    - Android 10 或更高版本为目标平台的应用无法启用或停用 WLAN。WifiManager.setWifiEnabled() 方法始终返回 false。
+- 解决办法如下
+    - 如果您需要提示用户启用或停用 WLAN，请使用设置面板。对直接访问已配置的 WLAN 网络实施了限制
+
+
+#### 5.2 开启Wi-Fi有延迟
+- 开启WiFi一般需要一定的时间,因此不能立马去连接，需要等WiFi稳定可用，经测试一般2.5秒即可完成。因此建议延迟一下！
 
 
 
+# 1
+- Android6.0通过WiFi名称密码连接WiFi的方案 转载
+  - https://blog.51cto.com/u_15858333/5817472
 - Android网络切换分析
   - https://blog.csdn.net/u011006622/article/details/79413115
 - 安卓(Android)网络管理工具
