--- a/Read/ReadBlogWiki/02.计划管理/03.计划的落地策略.md
+++ b/Read/ReadBlogWiki/02.计划管理/03.计划的落地策略.md
@@ -15,7 +15,8 @@
 
 ### 01.先来看几个故事
 - 不知道你身边有没有这样的一个例子。某人，暂时称他为小杨，小杨是一个很忙碌的人，他在教育网站买了不少的学习课程，下载了优酷上那些颇受好评的演讲稿，隔三差五就去书店搜刮有关考研的资料，就连单词书也买了好几本。
-- 于是他开始计划，计划要每天背上一百个单词，每天看一个公开课，每周看一个演讲，为此他做好了万全的准备，然而等到要实施计划的时候，突然他朋友来了个电话，于是他修改了计划跟朋友出去吃饭，今天缺失的就明天补上；没过多少天，他又因为一些事情打乱了自己的计划，又把那天的任务挪到了第二天。
+- 于是他开始计划，计划要每天背上一百个单词，每天看一个公开课，每周看一个演讲，为此他做好了万全的准备。
+- 然而等到要实施计划的时候，突然他朋友来了个电话，于是他修改了计划跟朋友出去吃饭，今天缺失的就明天补上；没过多少天，他又因为一些事情打乱了自己的计划，又把那天的任务挪到了第二天。
 
 
 
@@ -27,7 +28,8 @@
 
 
 ### 03.计划落地的焦虑
-- 所以你说案例小杨努力了么？他努力了，因为他至少看完了几个公开课背了几天单词。但是他有什么成果么？未必。接下来没多久，他放弃了计划。可问题在于，他觉得自己没做错什么，他确实是想要改变自己，也切实地想要背单词，事实是他也背了，公开课也开始看了，但是他就是觉得任务越堆越多，单词越背越难，变成了一个不可能完成的任务。
+- 所以你说案例小杨努力了么？他努力了，因为他至少看完了几个公开课背了几天单词。但是他有什么成果么？未必。接下来没多久，他放弃了计划。
+- **可问题在于，他觉得自己没做错什么，他确实是想要改变自己，也切实地想要背单词，事实是他也背了，公开课也开始看了，但是他就是觉得任务越堆越多，单词越背越难，变成了一个不可能完成的任务**。
 - 更要命的是他开始焦虑，开始抱怨，他觉得自己明明付出努力了，还费那么大劲准备了计划，他开始觉得不公平，为什么别人能背完的单词自己却背不完。
 - 没有行动力的计划只会毁了你，因为它让你觉得自己已经有所行动了。它会让你觉得能静心列下计划的你，已经比很多人都接近了一步。其实不然，列下计划而没有实施的你，只是一个伪理想主义者而已。
 - 没有行动力的后果便是拖延，拖延之后会让你第二天的任务猛增，越拖下去就越危险，它会让你开始抱怨不公平，开始觉得时间不够用进而产生焦虑，最后消磨你的斗志，打击你的信心。
@@ -44,7 +46,8 @@
 
 ### 05.从时间纬度落地
 - 目标是愿望层面的，计划是执行层面的，而计划的方式也有不同的认识维度。从时间维度，可以拟定 “短、中、长” 三阶段的计划：
-- 短期：拟定一年内的几个主要事项、行动周期和检查标准。中期：近 2～3 年内的规划，对一年内不足以取得最终成果的事项，可以分成每年的阶段性结果。长期：我的长期一般也就在 5～7 年周期，属于我的 “一辈子” 的概念范围了，而 “一辈子” 当有一个愿景。
+- 短期：拟定一年内的几个主要事项、行动周期和检查标准。中期：近 2～3 年内的规划，对一年内不足以取得最终成果的事项，可以分成每年的阶段性结果。
+- 长期：我的长期一般也就在 5～7 年周期，属于我的 “一辈子” 的概念范围了，而 “一辈子” 当有一个愿景。
 - 短期一年可以完成几件事或任务，中期两三年可以掌握精熟一门技能，长期的 “一辈子” 达成一个愿景，实现一个成长的里程碑。
 
 
@@ -56,7 +59,8 @@
 
 
 ### 07.小目标层层递进
-- 使我们对工作产生兴趣和热情的，不是工资，而是成就感。成就感会让你强化自己的存在感，体会到自身的价值和意义。对大脑来说，成就感是最有效率的一种激励方式。在计划的执行中，我们同样可以依此照办，设定这样的小目标：
+- 使我们对工作产生兴趣和热情的，不是工资，而是成就感。成就感会让你强化自己的存在感，体会到自身的价值和意义。
+- 对大脑来说，成就感是最有效率的一种激励方式。在计划的执行中，我们同样可以依此照办，设定这样的小目标：
 - 时间周期为1-2周，既不会过于频繁，也能及时收效；稍微高于自己的能力，可以有效激发自己付出更多努力；小目标之间相互关联、依次递进。
 
 
@@ -74,6 +78,8 @@
 
 ### 10.如何处理碎片化
 - 平时的时候，会在各种渠道接收一些碎片文章，各种群、朋友圈、朋友的推荐等等，这些碎片文章大部分是一些比较片面的，线性的文章，我一般都是先粗看一遍，如果发现有什么亮点，就会收藏起来，否则支持pass。
-- 然后，再我的某个碎片时间，把这些平时粗筛的文章拿出来看，这次再看有哪些可以被我吸收的知识，然后给它打上tag，最后在遇到一些问题的时候，就可以从这些tag中，寻找答案，所以，一般一篇好的文章，我会读三遍以上，而获得这些碎片文章，则是我碎片时间的主要目的。
-- 碎片文章其实是有很大隐患的，因为长期只从片面的角度看这些文章的东西，会让你的思维变得混乱、焦虑，所以你需要一段时间就进行一次磁盘碎片整理，将这些碎片文章，添加到你自己的知识体系树上，只有让这些碎片成为你的知识体系的一个根节点，这些碎片文章才是有意义的，否则，这些碎片时间就完全被浪费掉了。这就是为什么，看了各个大佬的干货，却依然成不了大佬？
+- 然后，再我的某个碎片时间，把这些平时粗筛的文章拿出来看，这次再看有哪些可以被我吸收的知识，然后给它打上tag，最后在遇到一些问题的时候，就可以从这些tag中，寻找答案。
+- 所以，一般一篇好的文章，我会读三遍以上，而获得这些碎片文章，则是我碎片时间的主要目的。
+- 碎片文章其实是有很大隐患的，因为长期只从片面的角度看这些文章的东西，会让你的思维变得混乱、焦虑，所以你需要一段时间就进行一次磁盘碎片整理，将这些碎片文章，添加到你自己的知识体系树上。
+- 只有让这些碎片成为你的知识体系的一个根节点，这些碎片文章才是有意义的，否则，这些碎片时间就完全被浪费掉了。这就是为什么，看了各个大佬的干货，却依然成不了大佬？
 
