--- a/Read/ReadBlogWiki/05.表达提升/04.沟通能力的演进.md
+++ b/Read/ReadBlogWiki/05.表达提升/04.沟通能力的演进.md
@@ -1,6 +1,5 @@
 #### 目录介绍
 - 01.什么是沟通能力
-- 05.别总封闭性问题
 - 06.沟通中合理提问
 - 07.三明治的沟通法
 - 08.螺旋推进沟通法
@@ -18,32 +17,6 @@
 
 
 
-### 05.别总封闭性问题
-#### 5.1 不要问封闭问题
-- 不要问封闭问题。问对方的问题大多数都是封闭式的话题，让对方只能从我们给出的选择当中进行回答。聊天当中，很多时候我们问对方的问题，其实都是一个封闭的问题。
-- 什么叫做封闭性问题。就是在问题当中给了对方一个选择，让对方非此即彼，只能选择“是”或者“不是”，“有”或者“没有”，“好”或者“不好”等等。
-- 比如，“你喜欢吃橙子吗？”这就是一个封闭性的话题，因为对方只有“喜欢”或者“不喜欢”两种选择。
-
-
-#### 5.2 开放性话题
-- 破除聊天当中傻瓜式的选择。开放性话题则是让对方主动说出来，而不是被动的选择，开放性话题让对方有更多表达的可能，而不是在已经给出的选择当中作出简单的回复。
-- 比如：“看你去了那么多地方，你最喜欢的是哪里呀？”。这个问题就是一个开放性的问题，它更容易让对方说出自己最喜欢的地方，甚至说出喜欢的理由。
-
-
-#### 5.3 多用开放性话题
-- 当然，对于封闭性的话题，如果对方很会聊天，他也可能不会规规矩矩的回答。但是，如果我们遇到这样会聊天的人，可能也就不需要费尽脑汁去做那么多了。
-- 比如：你可能会问“你周末的时候会去健身吗？”。给对方两种选择，会或者不会。但是如果你换成“你周末休息的时候，一般最喜欢做什么呀？”，就给了对方发挥的空间，给了他无数的可能。
-- 在不知道对方最想说的话题是什么的时候，尽量用开放性话题去探索寻找，不要给对方限定范围，让他只能被动从当中选择。让我们的思维从一个封闭的空间进入到一个开放的空间，也是给生活重新开了一扇门。
-
-#### 5.4 不要把天聊死
-- 很多时候，朋友开心地说去动物园玩的好开心呀，得到地回答有以下几种。虽然也算是积极回应，但是这样的情况下经常就把天聊死了。
-- 1、哇！你去动物园了啊！真棒！2、真的啊！动物园玩的好嗨。3、真的啊！那你有没有看到大象啊，怎么样好看不？
-- 当别人打开了一个话题，让对话流动起来，多进行情感呼应、运用社交语言和开放式提问，让对话生动起来。正确的积极回应可以这样：
-- 社交语言（非语言反馈）：自然地表达兴趣，放下手中的事情，看着别人，做好聆听地准备。这一点很重要，不要一边做事一边听别人说！
-- 情感呼应：“哇！听上去玩的特别开心，我也好想下次去呢！感觉会非常非常好玩”。
-- 开放式提问：“那你多跟我说一说经过，看到了什么啊？遇到了那些比较好玩的事情，好想听你的分享”。
-- 这样地回应就会让别人对话自然而然地进行下去，当对话进行下去，才有机会更好地建立与别人的同事或者朋友关系。
-
 
 
 ### 06.沟通中合理提问
@@ -53,6 +26,28 @@
 - 开放式：你有什么好的建议吗？
 - 引导式：如果资源的问题解决了，你第一步打算怎么做？
 - 反问式：我想问一下，这个需求开发排期是怎么样的？那业务的运营节奏是怎样的呢？
+
+
+#### 6.1 封闭式问题
+- 不要问封闭问题。问对方的问题大多数都是封闭式的话题，让对方只能从我们给出的选择当中进行回答。聊天当中，很多时候我们问对方的问题，其实都是一个封闭的问题。
+- 什么叫做封闭性问题。就是在问题当中给了对方一个选择，让对方非此即彼，只能选择“是”或者“不是”，“有”或者“没有”，“好”或者“不好”等等。
+- 比如，“你喜欢吃橙子吗？”这就是一个封闭性的话题，因为对方只有“喜欢”或者“不喜欢”两种选择。
+
+
+#### 6.2 开放式问题
+- 破除聊天当中傻瓜式的选择。开放性话题则是让对方主动说出来，而不是被动的选择，开放性话题让对方有更多表达的可能，而不是在已经给出的选择当中作出简单的回复。
+- 比如：“看你去了那么多地方，你最喜欢的是哪里呀？”。这个问题就是一个开放性的问题，它更容易让对方说出自己最喜欢的地方，甚至说出喜欢的理由。
+- 尽量用开放性话题去探索寻找，不要给对方限定范围，让他只能被动从当中选择。让我们的思维从一个封闭的空间进入到一个开放的空间，也是给生活重新开了一扇门。
+
+
+#### 6.4 不要把天聊死
+- 很多时候，朋友开心地说去动物园玩的好开心呀，得到地回答有以下几种。虽然也算是积极回应，但是这样的情况下经常就把天聊死了。
+- 1、哇！你去动物园了啊！真棒！2、真的啊！动物园玩的好嗨。3、真的啊！那你有没有看到大象啊，怎么样好看不？
+- 当别人打开了一个话题，让对话流动起来，多进行情感呼应、运用社交语言和开放式提问，让对话生动起来。正确的积极回应可以这样：
+- 社交语言（非语言反馈）：自然地表达兴趣，放下手中的事情，看着别人，做好聆听地准备。这一点很重要，不要一边做事一边听别人说！
+- 情感呼应：“哇！听上去玩的特别开心，我也好想下次去呢！感觉会非常非常好玩”。
+- 开放式提问：“那你多跟我说一说经过，看到了什么啊？遇到了那些比较好玩的事情，好想听你的分享”。
+- 这样地回应就会让别人对话自然而然地进行下去，当对话进行下去，才有机会更好地建立与别人的同事或者朋友关系。
 
 
 
