--- a/Read/YCBlogWiki/test/04.adb命令大全说明.md
+++ b/Read/YCBlogWiki/test/04.adb命令大全说明.md
@@ -59,12 +59,14 @@
 - 前提条件
     - 1.在同一Wi-Fi情况下；2.adb 环境已配置；3.设备已通过USB连接电脑
 - 第一种方式：通过命令行调试
-    - 1、首先将电脑和手机连接同一个WIFI，并插上数据线
-    - 2、打开电脑CMD,输入命令adb start-server开启adb服务
-    - 3、输入adb devices 查询已连接的设备【这一步没有usb连接怎么办？】
-    - 4、输入adb tcpip 5555 四个5代表的是默认端口 ， 也可以改
-    - 5、到了这一步就可以拔掉数据线了 拔掉后输入 adb connect 手机WIFI IP地址:端口号。例如： adb connect 192.168.1.39:5555
-    - 6.结果为connected to 192.168.1.39:5555 代表连接成功。这时候再次打开Android Studio就可以直接运行了，不用插数据线了
+    - 1.将 Android 设备和 adb 主机连接到同一 Wi-Fi 网络。
+    - 2.使用 USB 线将设备连接到主机【咱们机具无USB连接电脑，该步省略】。
+    - 3.设置目标设备以监听端口 5555 上的 TCP/IP 连接：adb tcpip 5555
+    - 4.拔掉连接目标设备的 USB 线【机具这步省略】。
+    - 5.找到 Android 设备的 IP 地址。例如，您可以在设置 > 关于平板电脑（或关于手机）> 状态 > IP 地址下找到 IP 地址。
+    - 6.通过 IP 地址连接到设备：adb connect 192.168.1.39:5555
+    - 7.确认主机已连接到目标设备：adb devices 后：List of devices attached  192.168.1.39:5555 device。您的设备现已连接到 adb。
+    - 8.如果与设备的 adb 连接断开：确保主机仍与 Android 设备连接到同一 Wi-Fi 网络。通过再次执行 adb connect 步骤重新连接。如果这样无法解决问题，请重置您的 adb 主机：adb kill-server 。然后，从头开始操作。
 - 第二种方式：插件
     - 1.打开File->perfrence->plugins->Browse repositories…->搜索 adb wifi->点击安装
     - 2.先用最普通的方式，用USB连接线，将手机和电脑连接，并成功被AS识别。
@@ -72,6 +74,10 @@
 - 第三种方式：开启无线ADB调试
     - 1.打开Android设备的开发者选项并启用无线ADB调试。找到“开发者选项”并进入该选项卡。找到并启用“无线ADB调试”选项。
     - 2.确保Android设备和PC端在同一局域网内，并查找Android设备的IP地址。
+    - 3.打开无线调试端口。有的Android设备默认关闭了无线adb调试端口，所以无线连接adb时会出现主机积极拒绝或连接超时等错误。
+    - 3.1 adb shell setprop service.adb.tcp.port 5555
+    - 3.2 adb shell stop adbd
+    - 3.3 adb shell start adbd
     - 3.连接Android设备和PC端。在PC端的命令行工具中输入以下命令：adb connect 192.168.1.39
 - USB调试模式与WIFI调试模式切换
     - adb usb 切换到USB模式
@@ -84,10 +90,18 @@
     - 第一种方案：输入adb kill-server关闭服务后再输入 adb start-server开启服务。重新连接设备。
     - 第二种方案：换USB线和USB口拔插，撤销usb授权重试，关闭开发者模式再开启等等都可以试试。
 - 遇到问题2:error: more than one device/emulator
-  - 报错原因：报错说的很清楚，有多个设备同时连接了电脑。
-  - 解决方法：执行 adb 指令的时候，指定执行的设备，就OK了。比如：adb -s xxxxxx shell ps 21190 注意：其中的 xxxxxx 就是你的设备序列号
-  - 获取序列号的方法，执行 adb devices。
-
+    - 报错原因：报错说的很清楚，有多个设备同时连接了电脑。
+    - 解决方法：执行 adb 指令的时候，指定执行的设备，就OK了。比如：adb -s xxxxxx shell ps 21190 注意：其中的 xxxxxx 就是你的设备序列号
+    - 获取序列号的方法，执行 adb devices。
+- 遇到问题3:adb: no devices/emulators found
+    - 1、未开发者模式和USB调试；2、adb功能异常；3、daemon未启用，即端口占用；4、devices驱动被更改
+    - 具体看：https://blog.csdn.net/qq_59975439/article/details/129315756
+    - https://zhuanlan.zhihu.com/p/81163165?from_voters_page=true
+- 遇到问题4:already connected to xxxxx
+    - 如果执行adb connect xxxxx时，提示already connected to xxxxx，但是执行adb devices时并没有连接的设备，则执行：
+    - adb kill-server  //停止adb服务
+    - adb start-server //开启adb服务
+    - 然后再执行：adb connect xxxxx 重新连接到Android设备。
 
 
 ### 06.adb问题分析
