--- a/Read/ReadBlogWiki/02.计划管理/06.很难坚持怎么办.md
+++ b/Read/ReadBlogWiki/02.计划管理/06.很难坚持怎么办.md
@@ -6,6 +6,7 @@
 - 06.分析定位是否准
 - 07.分析执行的偏差
 - 08.分析资源足不足
+- 09.需要延迟满足感
 
 
 
@@ -24,11 +25,16 @@
 - 执行力一定是第一位的，没有执行力，所有多么成熟严谨的方法论都是白搭。承认吧，你不是能力不行，你也不是比别人差，很多时候，你就是执行力不行。坚持听起来是最简单的，但是往往也是最难的。
 
 
+
 ### 04.忽略长远的收益
 - 明明付出了努力，却不知道付出的努力到哪里去了。不安心这么生活下去，却又没行动力改变现状。
-- 想要看几本书，让好好推荐一下，列了份书单，没过多久你又说这些书实在太枯燥又冗长，全部看完太消耗时间，还不如看网上小说；想要去旅行，到处搜集旅行的资料，可你又说没订到票，又实在抽不开时间；梦想出本书，发来几千字让给些意见，可没多久你又说没灵感又太累了，还是算了……
-- 好吧，你说没时间看书，那你每天睡前玩手机的时间为什么不能用来看书呢？看小说看新闻看八卦，你又是哪来的时间看的呢？你说你没有订到票，那你之前在计划的时候为什么不马上行动呢？你说你想要写书，可是又不愿意下笔去写，那又能怎么办呢？
-- 人就是这样，眼前的利益实在太诱人，导致忽略了长远的未来。所以才会为了一个眼前的事而义无反顾，却无法为了一个说不清道不明的未来而万死不辞。好比你听了一个励志的演讲觉得慷慨激昂，立马拿出要写下目标好好学习，可是怎么也没能坚持下来。
+- 想要看几本书，让好好推荐一下，列了份书单，没过多久你又说这些书实在太枯燥又冗长，全部看完太消耗时间，还不如看网上小说；
+- 想要去旅行，到处搜集旅行的资料，可你又说没订到票，又实在抽不开时间；
+- 梦想出本书，发来几千字让给些意见，可没多久你又说没灵感又太累了，还是算了……
+- 你说没时间看书，那你每天睡前玩手机的时间为什么不能用来看书呢？看小说看新闻看八卦，你又是哪来的时间看的呢？
+- 你说你没有订到票，那你之前在计划的时候为什么不马上行动呢？你说你想要写书，可是又不愿意下笔去写，那又能怎么办呢？
+- 人就是这样，眼前的利益实在太诱人，导致忽略了长远的未来。所以才会为了一个眼前的事而义无反顾，却无法为了一个说不清道不明的未来而万死不辞。
+- 好比你听了一个励志的演讲觉得慷慨激昂，立马拿出要写下目标好好学习，可是怎么也没能坚持下来。
 
 
 
@@ -43,8 +49,10 @@
 - 如果发现领导下达的目标与自身实际情况不符，更需要与领导多交流，务必找到出现偏差的具体原因，从而找到自身不足之处，在后续工作中进行重点补足。在定位不准又原因不明的情况下，是无法完成工作目标的。
 
 
+
 ### 07.分析执行的偏差
-- 在完成工作计划的过程中，一定要注意采取的方法，要与实际得到的结果相互验证。切忌不要想当然来做事情，反馈回来的结果不在预期范围内，依然固执己见，不愿做出调整。方法一旦错误，一味的坚持，只会使错误被越来越大，以至于产生不可预期的后果。实现计划的方式方法是多种多样的，一定要懂得变通，反复试验，以得出最优方案。
+- 在完成工作计划的过程中，一定要注意采取的方法，要与实际得到的结果相互验证。切忌不要想当然来做事情，反馈回来的结果不在预期范围内，依然固执己见，不愿做出调整。
+- 方法一旦错误，一味的坚持，只会使错误被越来越大，以至于产生不可预期的后果。实现计划的方式方法是多种多样的，一定要懂得变通，反复试验，以得出最优方案。
 
 
 ### 08.分析资源足不足
@@ -53,15 +61,16 @@
 
 
 
-### 01.需要延迟满足感
-#### 1.1 什么是延迟满足感
+### 09.需要延迟满足感
+#### 9.1 什么是延迟满足感
 - 上世纪 60 年代，美国有个著名的「斯坦福棉花糖实验」，实验中，小孩子可以马上获得一样奖励，比如 1 个棉花糖，或者等待一段时间，得到 2 个棉花糖。
 - 实验发现，能为偏爱的奖励坚持忍耐更长时间的孩子，通常具有更好的人生表现，如更好的 SAT 成绩、教育成就、身体质量指数等。
 - **延迟满足，就是指为了更有价值的长远结果，而放弃即时满足，以及在等待中展示的自我控制能力**。
 
 
-#### 1.2 不要给自己设限
-- 延迟满足感，决定了你做判断时，是基于长期还是短期。工作不分你我，做事不分边界，延迟满足感，会让你愿意主动做更多，得到更多的锻炼，而不是去斤斤计较这是不是我该做的事情。延迟满足感，会让你有更高的目标，定更高的标准，也许你前两年变化得慢，但10年后再看，肯定会非常不一样。
+#### 9.2 不要给自己设限
+- 延迟满足感，决定了你做判断时，是基于长期还是短期。工作不分你我，做事不分边界，延迟满足感，会让你愿意主动做更多，得到更多的锻炼，而不是去斤斤计较这是不是我该做的事情。
+- 延迟满足感，会让你有更高的目标，定更高的标准，也许你前两年变化得慢，但10年后再看，肯定会非常不一样。
 
 
 
