--- a/Read/ReadBlogWiki/02.计划管理/05.罗列计划的提升.md
+++ b/Read/ReadBlogWiki/02.计划管理/05.罗列计划的提升.md
@@ -14,7 +14,7 @@
 
 
 ### 01.计划能力的组成
-- 什么叫计划能力呢？我把它拆解成两类。第一类，“考虑未来”的能力：在指定时间内，为了完成某个计划或者目标，脑海里自动形成一步一步的方式。第二类，树立秩序感：外界环境的秩序和内在环境的秩序会互为影响。
+- 什么叫计划能力呢？小杨把它拆解成两类。第一类，“考虑未来”的能力：在指定时间内，为了完成某个计划或者目标，脑海里自动形成一步一步的方式。第二类，树立秩序感：外界环境的秩序和内在环境的秩序会互为影响。
 - 针对第一类：我们所说的计划，其实是预见性。比如，一周以后交作业，计划能力好的会算一算：从现在到一周以后，大概有几天？我需要完成哪几步？然后规划一下每天怎么做。这就是计划能力，它有很强的前瞻性，所以我把它叫作考虑未来的能力。
 - 针对第二类：计划能力是执行能力的一部分，它需要指挥大脑完成很多操作。即使一个人有很强的考虑未来的能力，如果他没有秩序感，也完成不了一步一步的规划。因此，秩序感更能够保证把这些能力用到实处。秩序感分两类：外界环境的秩序和内在环境的秩序。
 
@@ -58,12 +58,16 @@
 
 
 ### 04.如何强化秩序感
-#### 4.1 建立外界秩序感
+- “秩序”主要是：有条理，不混乱的情况。而“秩序感”是指：个体对事物的顺序，包括时间的先后、空间事物排列摆放，以及对环境中的规则、要求的感知，并在行动中能合理安排顺序、自觉遵守规定的能力。
 
+
+
+#### 4.1 建立外界秩序感
+- 对外部世界存在的规律和关系的感知与理解。
 
 
 #### 4.2 强化内在秩序感
-- 内在的秩序感，其实是对自己的认知。强化内在秩序感，要注意以下几点。
+- 内在的秩序感，其实是对自己的认知，将环境中建立起的秩序感内化成一种心智。强化内在秩序感，要注意以下几点。
 - 尊重“强迫症”——秩序感发展的必经之路。
 - 使用条理性语言——强化步骤拆解。使用条理性语言，比如，“首先、其次”“第一、第二”“接下来”……这个过程也是在强化步骤的拆解，让自己明白，要完成一件事，我们怎么一步一步去完成。
 - 规律作息——根据顺序走，不是根据钟表走。规律作息能帮助自己建立秩序感，也更有掌控感。
